--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -35,7 +35,7 @@
                         </form>
                     </div>
                     <div class="card-footer text-muted">
-                        Default: admin / admin
+                        Kepo yaa
                     </div>
                 </div>
             </div>
